# What: Individual compute node that executes training
# Why: Parallel processing across multiple machines
# When: Started on each compute node, reports to master

import asyncio
import logging
import torch
import time
from typing import Optional

from ..utils.config import ConfigManager

logger = logging.getLogger(__name__)

class WorkerNode:
    def __init__(self, worker_id: str, config: ConfigManager):
        self.worker_id = worker_id
        self.config = config.worker
        self.device = torch.device('cuda' if config.worker.gpu_enabled and torch.cuda.is_available() else 'cpu')
        self.current_job: Optional[str] = None
        self.running = False
        
    async def start(self):
        """Start the worker node"""
        self.running = True
        logger.info(f"Starting Worker {self.worker_id} on device: {self.device}")
        
        # Register with master
        await self.register_with_master()
        
        # Start heartbeat
        asyncio.create_task(self.send_heartbeat())
        
        # Start job processing loop
        await self.process_jobs()
    
    async def register_with_master(self):
        """Register this worker with the master coordinator"""
        worker_info = {
            'worker_id': self.worker_id,
            'device': str(self.device),
            'capabilities': {
                'gpu_enabled': self.config.gpu_enabled,
                'max_batch_size': self.config.max_batch_size
            }
        }
        logger.info(f"Registering with master at {self.config.master_host}:{self.config.master_port}")
        # TODO: Implement actual registration via gRPC
    
    async def send_heartbeat(self):
        """Send periodic heartbeat to master"""
        while self.running:
            # TODO: Implement actual heartbeat via gRPC
            logger.debug(f"Worker {self.worker_id} heartbeat")
            await asyncio.sleep(30)
    
    async def process_jobs(self):
        """Main job processing loop"""
        while self.running:
            if self.current_job:
                await self.execute_training_step()
            await asyncio.sleep(0.1)
    
    async def execute_training_step(self):
        """Execute a single training step"""
        # Placeholder for actual training logic
        logger.debug(f"Worker {self.worker_id} executing training step")
        await asyncio.sleep(1)  # Simulate work